# flight-rising-breeding-tracker

./: CMakeLists.txt  allele.cpp  allele.h  binarytreegenerator.cpp  binarytreegenerator.h  binarytreenode.cpp  binarytreenode.h  clickableqgraphicsview.cpp  clickableqgraphicsview.h  colour.cpp  colour.h  csvreader.cpp  csvreader.h  currency.h  dragon.cpp  dragon.h  dragonpossibility.cpp  dragonpossibility.h  eyeallele.cpp  eyeallele.h  gender.h  information.cpp  information.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rarity.h  raritystring.cpp  raritystring.h  saveformat.cpp  saveformat.h  searchbuilder.cpp  searchbuilder.h  urlopener.cpp  urlopener.h  vectorhelpers.h  weightedvalue.h
assets/: rarity-chances.csv  save-schema.json
example-save/: example.json
